--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "baseUrl": ".",
-    "lib": ["es6", "esnext"]
+    "lib": [
+      "es6",
+      "esnext"
+    ]
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "src/test",
+    "dist"
+  ]
 }
